k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rapid-tech-store
  labels:
    name: rapid-tech-store
    environment: production
